# chopper

./: .editorconfig  .gitignore  1  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IMPROVEMENTS.md  Makefile  README.md  VERSION.md  VERSION.txt  chopper.code-workspace  chopper_v2.code-workspace  chroma.sqlite3  ci_run.txt  cov.txt  coverage_report.txt  knowledge_graph.sqlite3-wal  mcp_out.txt  package.json  pyproject.toml  pytest_out.txt  setup.bat  setup.csh  setup.ps1  setup.sh  test_out.txt  test_run.txt
.copilot-tracking/research/: 20260421-handoff-readiness-devils-advocate-research.md  20260421-implementation-roadmap.md
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/agent_memory/: README.md  chopper-buildout.md  chopper-domain-companion.md  chopper-stage-builder.md  principal-software-engineer.md
.github/agents/: Thinking-Beast-Mode.agent.md  chopper-buildout.agent.md  chopper-domain-companion.agent.md  chopper-stage-builder.agent.md  devils-advocate.agent.md  domain-analyzer.agent.md  plan.agent.md  principal-software-engineer.agent.md  project-architecture-planner.agent.md  swe-subagent.agent.md  task-researcher.agent.md
.github/instructions/: memory-bank.instructions.md  project.instructions.md  python-source.instructions.md  tests.instructions.md
.github/prompts/: bisect-feature-breakage.prompt.md  bootstrap-domain.prompt.md  buildout-commands.md  explain-last-run.prompt.md  package-bug-artifacts.prompt.md  report-chopper-bug.prompt.md  validate-my-jsons.prompt.md  why-was-dropped.prompt.md
.github/skills/acquire-codebase-knowledge/: SKILL.md
.github/skills/context-map/: SKILL.md
.github/skills/gitnexus-cli/: SKILL.md
.github/skills/gitnexus-debugging/: SKILL.md
.github/skills/gitnexus-exploring/: SKILL.md
.github/skills/gitnexus-guide/: SKILL.md
.github/skills/gitnexus-impact-analysis/: SKILL.md
.github/skills/gitnexus-refactoring/: SKILL.md
.github/workflows/: pages.yml  static.yml
doc/: BEHAVIOR_GUIDE.md  IMPLEMENTATION_GUIDE.md  README.md  TECHNICAL_GUIDE.md  USER_MANUAL.md
docs/: ARCHITECTURE.md  ARCHITECTURE_PLAN.md  CLI_HELP_TEXT_REFERENCE.md  D0_REVIEW_ISSUES_AND_FIX_SUGGESTIONS.md  DAY0_REVIEW.md  DEVELOPER_KICKOFF.md  DIAGNOSTIC_CODES.md  ENGINEERING_HANDOFF_CHECKLIST.md  FINAL_HANDOFF_REVIEW.md  FUTURE_PLANNED_DEVELOPMENTS.md  HANDOFF_REVIEW_20260421.md  IMPLEMENTATION_PITFALLS_GUIDE.md  IMPLEMENTATION_ROADMAP.md  REAL_WORLD_EXAMPLE.md  RISKS_AND_PITFALLS.md  SNORT_ANALYSIS_AND_CHOPPER_COMPARISON.md  TCL_PARSER_SPEC.md  TECHNICAL_PRESENTATION_DECK.md  TECHNICAL_PRESENTATION_DIAGRAMS.md  TECHNICAL_REQUIREMENTS.md  USER_REFERENCE_MANUAL.md  chopper_description.md
docs/flow_builder/: flowbuilder_wiki.txt
docs/proposal/: PROPOSAL_1_SIGNOFF_FILTERING.md
docs_old/: ACTION_PLAN.md  ARCHITECTURE.md  DEVELOPER_KICKOFF.md  DIAGNOSTIC_CODES.md  DOCUMENTATION_INDEX.md  ENGINEERING_HANDOFF_CHECKLIST.md  FUTURE_PLANNED_DEVELOPMENTS.md  README.md  TCL_PARSER_SPEC.md  TECHNICAL_REQUIREMENTS.md  USER_REFERENCE_MANUAL.md  flowbuilder_vs_chopper.html
docs_old/flow_builder/: FLOWBUILDER_REFERENCE.md  PITFALLS_FLOWBUILDER_JSON.md
examples/01_base_files_only/jsons/: base.json
examples/02_base_procs_only/jsons/: base.json
examples/03_base_stages_only/jsons/: base.json
examples/04_base_files_and_procs/jsons/: base.json
examples/05_base_files_and_stages/jsons/: base.json
examples/06_base_procs_and_stages/jsons/: base.json
examples/07_base_full/jsons/: base.json
examples/08_base_plus_one_feature/: project.json
examples/08_base_plus_one_feature/jsons/: base.json
examples/09_base_plus_multiple_features/: project.json
examples/09_base_plus_multiple_features/jsons/: base.json
examples/10_chained_features_depends_on/: project.json
examples/10_chained_features_depends_on/jsons/: base.json
examples/11_project_base_only/: project.json
examples/11_project_base_only/jsons/: base.json
fev_formality/: fev_fm_eco.stack  fev_fm_eco_post_synth.tcl  fev_fm_rtl2rtl.tcl  vars.tcl
fev_formality/utils/targ_synth/: run_targeted_synth.tcl
json_kit/: README.md  VERSION.txt  setup.csh  setup.ps1
json_kit/docs/: JSON_AUTHORING_GUIDE.md
json_kit/schemas/: base-v1.schema.json  diagnostic-v1.schema.json  feature-v1.schema.json  progress-event-v1.schema.json  run-result-v1.schema.json
presentation/: chopper_onboarding.html
schemas/: base-v1.schema.json  diagnostic-v1.schema.json  feature-v1.schema.json  project-v1.schema.json  run-result-v1.schema.json
schemas/scripts/: check_diagnostic_registry.py  check_service_signatures.py  file_bug_report.py  package_bug_report.py  validate_jsons.py
scripts/: check_diagnostic_registry.py  check_service_signatures.py  file_bug_report.py  package_bug_report.py  validate_jsons.py
snort/: README.md  procdiff  snort  tcl_builtins.txt
src/chopper/: __init__.py
standalone_json_kit/agent/: DOMAIN_ANALYZER.md
standalone_json_kit/docs/: JSON_AUTHORING_GUIDE.md
standalone_json_kit/schemas/: base-v1.schema.json
technical_docs/: ARCHITECTURE_PLAN.md  CLI_HELP_TEXT_REFERENCE.md  DIAGNOSTIC_CODES.md  FINAL_HANDOFF_REVIEW.md  FUTURE_PLANNED_DEVELOPMENTS.md  IMPLEMENTATION_DECISION_LOG.md  IMPLEMENTATION_ROADMAP.md  JSON_AUTHORING_GUIDE.md  RISKS_AND_PITFALLS.md  SNORT_ANALYSIS_AND_CHOPPER_COMPARISON.md  TCL_PARSER_SPEC.md  chopper_description.md
tests/: FIXTURE_AUDIT.md  FIXTURE_CATALOG.md  GOLDEN_FILE_GUIDE.md  TESTING_STRATEGY.md  __init__.py
tests/fev_formality/: default_milestone.fm.tcl  fev_fm_gate2gate.tcl  fev_fm_rtl2apr.stack  fev_fm_syn2apr.stack  prepare_fev_formality.tcl  v2k_check.py
tests/fixtures/: create_latin1_fixture.py  gen_large_domain.py
tests/golden/: __init__.py  test_audit_artifacts_golden.py  test_smoke.py
tests/integration/: __init__.py  crash_harness.py  test_cli_e2e.py  test_mcp_stdio_e2e.py  test_runner_localfs_e2e.py  test_smoke.py
tests/property/: __init__.py  test_determinism.py  test_smoke.py
tests/unit/: __init__.py  test_package_smoke.py  test_testing_strategy_scenario_count.py
(+214 files in other folders)
