[project]
name = "chopper"
version = "0.1.0"
description = "EDA TFM trimming tool for Cheetah R2G flows"
requires-python = ">=3.13"
license = {text = "Intel Proprietary"}
authors = [
    {name = "rkudipud"},
]

dependencies = [
    "structlog>=24.1.0,<25",
    "jsonschema>=4.0,<5",
]

[project.optional-dependencies]
rich = [
    "rich>=13.0",
]
dev = [
    "pytest>=7.0,<9",
    "pytest-cov>=4.0,<6",
    "pytest-benchmark>=4.0,<5",
    "pytest-regressions>=0.5",
    "hypothesis>=6.0,<7",
    "mypy>=1.0,<2",
    "ruff>=0.4,<1",
    "import-linter>=2.0,<3",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 120
src = ["src", "tests"]
# Fixture directories hold user-authored input data (Tcl domains, JSON
# selections, mock Python harnesses). They represent realistic customer
# inputs, not Chopper project code, and are deliberately excluded from the
# lint + format gates so they can mirror real-world styles verbatim.
extend-exclude = ["tests/fixtures/**"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "FA"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=src/chopper --cov-branch --cov-report=term-missing --cov-fail-under=78"

[tool.hypothesis]
# Start conservative; raise once CI budget profiling confirms headroom. See
# docs/FINAL_HANDOFF_REVIEW.md S-9 for rationale.
max_examples = 200
print_blob = true

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# ---------------------------------------------------------------------------
# import-linter contracts.
#
# Enforces the layered architecture defined in docs/ARCHITECTURE_PLAN.md §3:
#
#     cli  →  orchestrator  →  services  →  core
#     adapters → core (+ third-party libs only)
#
# Services (parser, config, compiler, trimmer, generators, validator, audit)
# MUST NOT import each other. The core package MUST NOT import any sibling.
# Adapters bridge ports to third-party libs; they may import core but no
# sibling service.
#
# Run via `lint-imports` (installed with the dev extra) and wired into
# `make check`.
# ---------------------------------------------------------------------------

[tool.importlinter]
root_packages = ["chopper"]

[[tool.importlinter.contracts]]
name = "Layered architecture: cli -> orchestrator -> services -> core"
type = "layers"
# During the staged buildout (see docs/IMPLEMENTATION_ROADMAP.md), upper
# layers come online only when their stage lands. Layers are wrapped in
# parentheses to mark them as optional — import-linter treats a missing
# optional layer as "no modules yet" rather than failing the contract.
# Once Stage 5 is complete every layer is populated and the parens become
# cosmetic.
layers = [
    "(chopper.cli)",
    "chopper.orchestrator",
    "chopper.parser | chopper.config | chopper.compiler | chopper.trimmer | chopper.generators | (chopper.validator) | chopper.audit",
    "chopper.adapters",
    "chopper.core",
]

[[tool.importlinter.contracts]]
name = "core is stdlib-only (no sibling imports)"
type = "forbidden"
# Modules are added to `forbidden_modules` as each stage lands. At Stage 0
# only `chopper.core` exists, so the contract currently has no siblings to
# forbid. Each subsequent stage (parser, config, compiler, …) adds its
# module to the list in the same PR that introduces the module.
source_modules = ["chopper.core"]
forbidden_modules = [
    "chopper.parser",
    "chopper.config",
    "chopper.compiler",
    "chopper.trimmer",
    "chopper.generators",
    "chopper.audit",
    "chopper.orchestrator",
    "chopper.adapters",
]

[[tool.importlinter.contracts]]
name = "Services are independent (no sibling-to-sibling imports)"
type = "independence"
# Populated as each service lands. `independence` requires at least two
# modules to be meaningful; until Stage 2 introduces a second service the
# contract is commented out by being left with a single entry (import-linter
# accepts but effectively no-ops it).
modules = [
    "chopper.core",
]

[[tool.importlinter.contracts]]
name = "Adapters depend only on core + third-party"
type = "forbidden"
# `chopper.adapters` does not exist yet (added in the stage that introduces
# the first adapter). Contract is declared now with an empty forbidden list
# so the layered-architecture story is visible in config; entries are added
# as each service module lands.
source_modules = ["chopper.adapters"]
forbidden_modules = [
    "chopper.parser",
    "chopper.config",
    "chopper.compiler",
    "chopper.trimmer",
    "chopper.generators",
    "chopper.audit",
    "chopper.orchestrator",
    "chopper.cli",
]
