[project]
name = "chopper"
version = "0.3.2"
description = "EDA TFM trimming tool for Cheetah R2G flows"
# Minimum supported runtime is Python 3.11 so the tool installs on EDA grid
# nodes that lag behind HEAD. The development venv is created against 3.13
# (see setup.{ps1,sh,csh,bat}) so contributors get the newest toolchain, but
# no 3.12+-only syntax is permitted in src/ — ruff's `target-version` and
# mypy's `python_version` below are both pinned to 3.11 so the lint/type
# gates reject accidental uplevel features.
requires-python = ">=3.11"
license = {text = "Intel Proprietary"}
authors = [
    {name = "Rajesh Kudipudi, rajesh.Kudipudi@intel.com"},
]

dependencies = [
    "jsonschema>=4.0,<5",
]

[project.optional-dependencies]
rich = [
    "rich>=13.0",
]
dev = [
    "pytest>=7.0,<9",
    "pytest-cov>=4.0,<6",
    "pytest-benchmark>=4.0,<5",
    "pytest-regressions>=0.5",
    "hypothesis>=6.0,<7",
    "mypy>=1.0,<2",
    "ruff>=0.4,<1",
    "import-linter>=2.0,<3",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
chopper = "chopper.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]
# Fixture directories hold user-authored input data (Tcl domains, JSON
# selections, mock Python harnesses). They represent realistic customer
# inputs, not Chopper project code, and are deliberately excluded from the
# lint + format gates so they can mirror real-world styles verbatim.
extend-exclude = ["tests/fixtures/**"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "FA"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=src/chopper --cov-branch --cov-report=term-missing --cov-fail-under=78"

[tool.hypothesis]
# Per TESTING_STRATEGY.md and .github/instructions/project.instructions.md,
# property tests run with max_examples=500. Originally started at 200 during
# the Stage 0/1 buildout (FINAL_HANDOFF_REVIEW.md S-9); raised to the
# strategy-document target once CI budget profiling confirmed headroom.
max_examples = 500
print_blob = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# ---------------------------------------------------------------------------
# import-linter contracts.
#
# Enforces the layered architecture defined in technical_docs/ARCHITECTURE_PLAN.md §3:
#
#     cli  →  orchestrator  →  services  →  core
#     adapters → core (+ third-party libs only)
#
# Services (parser, config, compiler, trimmer, generators, validator, audit)
# MUST NOT import each other. The core package MUST NOT import any sibling.
# Adapters bridge ports to third-party libs; they may import core but no
# sibling service.
#
# Run via `lint-imports` (installed with the dev extra) and wired into
# `make check`.
# ---------------------------------------------------------------------------

[tool.importlinter]
root_packages = ["chopper"]

[[tool.importlinter.contracts]]
name = "Layered architecture: cli -> orchestrator -> services -> core"
type = "layers"
# All layers are populated (Stages 0–5 complete). The contract enforces
# strict top-down imports: cli may depend on orchestrator, orchestrator on
# services, services on core, adapters on core. No upward or sibling
# imports across service modules.
layers = [
    "chopper.cli",
    "chopper.orchestrator",
    "chopper.parser | chopper.config | chopper.compiler | chopper.trimmer | chopper.generators | chopper.validator | chopper.audit",
    "chopper.adapters",
    "chopper.core",
]

[[tool.importlinter.contracts]]
name = "core is stdlib-only (no sibling imports)"
type = "forbidden"
# `chopper.core` must not import any sibling module. This keeps the shared
# frozen-dataclass + diagnostic registry reusable in isolation and prevents
# accidental inversion of the layered architecture above.
source_modules = ["chopper.core"]
forbidden_modules = [
    "chopper.parser",
    "chopper.config",
    "chopper.compiler",
    "chopper.trimmer",
    "chopper.generators",
    "chopper.validator",
    "chopper.audit",
    "chopper.orchestrator",
    "chopper.cli",
    "chopper.adapters",
]

[[tool.importlinter.contracts]]
name = "Services are independent (no sibling-to-sibling imports)"
type = "independence"
# Services do not import each other. Any cross-service dependency must flow
# through the shared types in `chopper.core` or through the orchestrator.
modules = [
    "chopper.parser",
    "chopper.config",
    "chopper.compiler",
    "chopper.trimmer",
    "chopper.generators",
    "chopper.validator",
    "chopper.audit",
]

[[tool.importlinter.contracts]]
name = "Adapters depend only on core + third-party"
type = "forbidden"
# Adapters bridge ports to third-party libraries (rich, filesystem). They
# may import `chopper.core` plus stdlib / third-party packages, but must
# never reach sideways into services or upward into orchestrator/CLI.
source_modules = ["chopper.adapters"]
forbidden_modules = [
    "chopper.parser",
    "chopper.config",
    "chopper.compiler",
    "chopper.trimmer",
    "chopper.generators",
    "chopper.validator",
    "chopper.audit",
    "chopper.orchestrator",
    "chopper.cli",
]
